[gd_scene load_steps=15 format=3 uid="uid://qvf4ea06wf2a"]

[ext_resource type="Script" uid="uid://dcbwj3mc75n72" path="res://scenes/world/world.gd" id="1_wx2y6"]
[ext_resource type="PackedScene" uid="uid://1rrvx57k2cva" path="res://scenes/player/player.tscn" id="2_dcncw"]
[ext_resource type="PackedScene" uid="uid://bcimr0tmqsfn5" path="res://scenes/ui/menu/pausemenu/pause_menu.tscn" id="3_t6xbs"]
[ext_resource type="PackedScene" uid="uid://m0amkyentqqi" path="res://scenes/ui/game_over/game_over.tscn" id="4_hkyxq"]
[ext_resource type="PackedScene" uid="uid://romfrcc8qrho" path="res://scenes/ui/level/level_completed.tscn" id="5_vtms1"]
[ext_resource type="PackedScene" uid="uid://dx021munrhlss" path="res://scenes/ui/icons/health/sardine_health.tscn" id="5_wx2y6"]
[ext_resource type="PackedScene" uid="uid://cmo3a5is2oema" path="res://scenes/ui/icons/collectibles/sardine_collectible.tscn" id="6_dcncw"]
[ext_resource type="PackedScene" uid="uid://bimx81jm3ddyv" path="res://scenes/tilemap/tilemap.tscn" id="6_k8b1u"]
[ext_resource type="Texture2D" uid="uid://cbjo72byuuam1" path="res://assets/images/collectibles/sardine/16p_inverted_sardine.png" id="7_vtms1"]
[ext_resource type="PackedScene" uid="uid://csjef0gbduwru" path="res://scenes/world/backgrounds/sky_background.tscn" id="9_llwdv"]

[sub_resource type="Animation" id="Animation_hkyxq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in: 3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.647059)]
}

[sub_resource type="Animation" id="Animation_3ut3u"]
resource_name = "countdown"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in: 3", "Start in: 2", "Start in: 1"]
}

[sub_resource type="Animation" id="Animation_wx2y6"]
resource_name = "hide_start_label"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.647059), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wx2y6"]
_data = {
&"RESET": SubResource("Animation_hkyxq"),
&"countdown": SubResource("Animation_3ut3u"),
&"hide_start_label": SubResource("Animation_wx2y6")
}

[node name="WorldTemplate" type="Node2D"]
script = ExtResource("1_wx2y6")

[node name="player" parent="." instance=ExtResource("2_dcncw")]

[node name="Hazards" type="Node" parent="."]

[node name="Collectibles" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("3_t6xbs")]
visible = false

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("4_hkyxq")]
visible = false

[node name="TimerContainer" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 3.0
offset_top = 18.0
offset_right = 3.0
offset_bottom = 18.0
grow_horizontal = 2
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/TimerContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer/TimerContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestTimeContainer" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 9.0
offset_bottom = 9.0
grow_horizontal = 2
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/BestTimeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BestTimeLabel" type="Label" parent="CanvasLayer/BestTimeContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Record: 00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifeCounter" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_right = 11.0
offset_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LifeCounter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0454545
anchor_right = 0.954545
anchor_bottom = 1.07143
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="LifeCounterLabel" type="Label" parent="CanvasLayer/LifeCounter/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SardineHealth" parent="CanvasLayer/LifeCounter/CenterContainer" instance=ExtResource("5_wx2y6")]
position = Vector2(2, 6)

[node name="CollectiblesCounter" type="ColorRect" parent="CanvasLayer"]
offset_left = 3.0
offset_right = 47.0
offset_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CollectiblesCounter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.159091
anchor_right = 1.06818
anchor_bottom = 1.07143
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="CollectiblesCounterLabelLabel" type="Label" parent="CanvasLayer/CollectiblesCounter/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SardineHealth" parent="CanvasLayer/CollectiblesCounter/CenterContainer" instance=ExtResource("6_dcncw")]
position = Vector2(2, 6)
texture = ExtResource("7_vtms1")

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.647059)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in: 3"

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_vtms1")]
visible = false

[node name="TimeCount" type="Timer" parent="CanvasLayer"]
autostart = true

[node name="LevelTileMap" parent="." instance=ExtResource("6_k8b1u")]

[node name="SkyBackground" parent="." instance=ExtResource("9_llwdv")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_wx2y6")
}

[connection signal="timeout" from="CanvasLayer/TimeCount" to="." method="_on_timer_timeout"]
